# Kood-johvi

./: README.md
0-shell/: Cargo.toml  README.md
0-shell/src/: constant.rs  error.rs  flags_parse.rs  main.rs  parse.rs  pipeline.rs  sequence.rs  traits.rs
0-shell/src/command/: cat.rs  cd.rs  cowsay.rs  cp.rs  date.rs  echo.rs  exit.rs  help.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  ping.rs  pwd.rs  rm.rs  yes.rs
ascii-art/: dev.txt  imagine.txt  main.go
ascii-art-fs/: main.go  res.txt  test.txt
ascii-art-web/: README.MD  go.mod  main.go
bomberman-dom/: .editorconfig  README.md  package-lock.json  package.json  tsconfig.json
drawing/: .gitignore  Cargo.toml
filler/: .gitignore  Cargo.toml  Makefile.toml  README.md  template_run.sh
forum/: builddocker.sh  dockerfile  go.mod  go.sum  (+2 more)
rt/: .gitignore  Cargo.toml  README.md  SCENE.md  TODO.md  scene.ron  scene_snowman.ron
rt/src/: args.rs  buildable.rs  camera.rs  gui.rs  lib.rs  local_vector.rs  main.rs  ray.rs  scene.rs  trace.rs  validators.rs
rt/src/helpers/: mod.rs  reservoir.rs  square_cache.rs
rt/src/lights/: directional.rs  mod.rs  point.rs
rt/src/material/: diffuse.rs  glass.rs  glossy.rs  metal.rs  mirror.rs  mod.rs  phong.rs
rt/src/material/math/: fresnel.rs  microfacet.rs  mod.rs
rt/src/object_like/: group.rs  hit.rs  instancer.rs  mod.rs  object.rs  transform.rs
rt/src/object_like/csg/: difference.rs  intersection.rs  mod.rs  union.rs
rt/src/object_like/shape/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
rt/src/post_process/: exposure.rs  gamma.rs  mod.rs  tone_map.rs
(+734 files in other folders)
