[package]
name = "zero-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
nom = "7.1"
os_pipe = "1.1"
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10"
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"
once_cell = "1.17.1"

fs_extra = "1.3.0"

[dev-dependencies]
assert_matches = "1.5"
