[package]
name = "jank_tracer"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
glam = { version = "0.22", features = ["serde"] }
rayon = "1.6"
itertools = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
#typetag = "0.2"
#dyn-clone = "1"

ron = "0.8"
#serde_json = "1"

rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
once_cell = "1"

ordered-float = "3"

thread-priority = "0.10"

either = { version = "1", features = ["serde"] }

smallvec = { version = "1", features = [] }

bvh = "0.7.1"

eframe = { version = "0.20.1", features = ["wgpu", "default_fonts"], default-features = false }

indexmap = { version = "1.9.2", features = ["serde"] }

[dev-dependencies]
criterion = "0.4"

[features]
